# RAVANA

./: .cursorignore  .gitignore  .snake_index.json  AUTONOMOUS_BLOGGING_GUIDE.md  BLOG_CONFIGURATION_REFERENCE.md  BLOG_INTEGRATION_GUIDE.md  CONVERSATIONAL_AI_FIXES.md  CONVERSATIONAL_AI_IMPROVEMENTS.md  CONVERSATIONAL_AI_INTEGRATION.md  DEVELOPER_GUIDE.md  EMOTIONAL_INTELLIGENCE_ENHANCEMENT_SUMMARY.md  ENHANCED_SNAKE_IMPLEMENTATION.md  GEMINI.md  GEMINI_ENHANCEMENT_DOCUMENTATION.md  GEMINI_IMPLEMENTATION_CHECKLIST.md  GRACEFUL_SHUTDOWN_IMPLEMENTATION.md  LICENSE  PHYSICS_EXPERIMENTS.md  QWEN.md  README.md  SNAKE_AGENT_FINAL_SUMMARY.md  SNAKE_AGENT_SETUP.md  SNAKE_AGENT_SUCCESS_SUMMARY.md  SPAM_FILTER_ANALYSIS.md  TESTING_COMPLETE.md  TESTING_GUIDE.md  TEST_IMPLEMENTATION_SUMMARY.md  TIMEOUT_UPDATE_SUMMARY.md  WARP.md  architecture.md  architecture_encoding.py  check_agi_status.py  cleanup.bat  cleanup_session.py  cmb_analysis.py  comprehensive_implementation_test.py  comprehensive_intelligent_workflow_test.py  context.md  debug_main.py  direct_implementation_test.py  (+57 more)
.qoder/quests/: intelligent-adaptive-builder.md
agi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
analysis/: README.md  config.json  setup.py
analysis/experiments/: template.py
core/: action_manager.py  autonomous_implementation.py  builder_integration.py  builder_models.py  change_identification.py  code_analyzer.py  code_transformer.py  config.json  config.py  embeddings_manager.py  enhanced_action_manager.py  enhanced_memory_service.py  failure_analysis_engine.py  intelligent_builder_controller.py  llm.py  llm_selector.py  model_manager.py  multi_strategy_executor.py  process_management.py  prompt_manager.py  reasoning_engine.py  self_reflection_module.py  shutdown_coordinator.py  snake_agent.py  snake_agent_enhanced.py  snake_agent_implementer.py  snake_code_analyzer.py  snake_config_analyzer.py  snake_data_models.py  snake_file_monitor.py  snake_improvement_engine.py  snake_indexer.py  snake_ipc_manager.py  snake_llm.py  snake_log_manager.py  snake_multiprocess_experimenter.py  snake_parallel_analyzer.py  snake_peek.py  snake_performance_monitor.py  snake_process_manager.py  (+26 more)
core/actions/: __init__.py  action.py  blog.py  blog_api.py  blog_content_generator.py  blog_content_validator.py  coding.py  collaborative_task.py  exceptions.py  experimental.py  io.py  multi_modal.py  registry.py
core/error_recovery/: decorators.py  error_recovery_manager.py  examples.py
core/resource_management/: resource_manager.py
core/safety/: decorators.py  examples.py  safety_manager.py
core/services/: autonomous_blog_scheduler.py  (+1 more)
database/: engine.py  models.py  vltm_schema.sql
demos/: prompt_enhancement_demo.py
docs/: AI_DRIVEN_EMBEDDINGS_GUIDE.md  ANALYSIS_SUMMARY.md  EMBEDDINGS_GUIDE.md  index.md  prompt_enhancement_summary.md  snake_agent_performance_guide.md  snake_agent_performance_optimization_guide.md
examples/: ai_driven_embedding_examples.py
modules/: agi_experimentation_engine.py  enhanced_experimentation_module.py  experimentation.py  experimentation_module.py  failure_learning_system.py  function_calling_system.py  innovation_publishing_system.py  mad_scientist_impossible_projects.py  mad_scientist_system.py  physics_analysis_system.py  physics_prototyping_system.py  reflection_module.py
modules/episodic_memory/: README_MULTIMODAL.md  client.py  embedding_service.py  hierarchical_memory.py  llm.py  memory.py  models.py  multi_modal_service.py  postgresql_store.py  pyproject.toml  schema.sql  search_engine.py  setup_database.py  test_memory.py  test_multimodal_memory.py  whisper_processor.py
modules/event_detection/: README.md  client_test.py  event_detector.py  main.py  pyproject.toml
profiles/: user_7601639976_platform_profile.json  user_7601639976_profile.json  user_user101_platform_profile.json  user_user123_platform_profile.json  user_user456_platform_profile.json
prompts/: code_generation.json  creative_problem_solving.json  decision_making.json  experimentation.json  new_test_template.json  self_reflection.json
scripts/: cleanup_session.py  launch_conversational_ai.py  physics_cli.py  physics_experiment_prompts.py  run_physics_tests.py
services/: data_service.py  knowledge_service.py  memory_service.py  multi_modal_service.py
test_snake_logs/: interactions.json
tests/: __init__.py  conftest.py  demo_blog_usage.py  demo_enhanced_emotional_intelligence.py  demo_key_rotation.py  force_implementation_test.py  safety_validation_test.py  simple_gemini_test.py  simple_logging_test.py  simple_physics_test.py  simple_snake_test.py  test_action_manager.py  test_advanced_physics.py  test_autonomous_blogging_integration.py  test_autonomous_implementation.py  test_blog_components_unit.py  test_blog_integration.py  test_blog_integration_e2e.py  test_bot_fix.py  test_bot_verification.py  test_bots.py  test_cli_args.py  test_communication_channels.py  test_comprehensive_emotional_intelligence_mocked.py  test_comprehensive_integration_mocked.py  test_comprehensive_mocked_system.py  test_comprehensive_snake_agent_mocked.py  test_config.py  test_conversational_ai.py  test_conversational_ai_fix.py  test_conversational_ai_flag.py  test_conversational_ai_import.py  test_conversational_ai_integration.py  test_core_system.py  test_curiosity_trigger.py  test_data_service.py  test_decision_engine.py  test_emotional_behavioral.py  test_emotional_intelligence.py  test_emotional_intelligence_fix.py  (+66 more)
wiki/: API Reference.md  Action System.md  Architecture & Design.md  Configuration.md  Conversational AI Communication Framework.md  Core System.md  Database Schema.md  Decision-Making System.md  Deployment & Operations.md  Development Guide.md  Emotional Intelligence.md  Enhanced Snake Agent Architecture.md  Enhanced Snake Agent.md  Graceful Shutdown.md  LLM Integration.md  Memory Systems.md  Multi-Modal Memory.md  Project Overview.md  Self-Improvement.md  Services.md  Snake Agent Configuration.md  Specialized Modules-57f9b30b-b165-48d3-8e89-196940d26190.md  Specialized Modules.md
(+168 files in other folders)
