[project]
name = "agi"
version = "0.1.0"
description = "An autonomous, evolving agentic system designed for continuous 24/7 operation, driven by internal states, reflection, and self-generated goals."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "chromadb>=0.3.21",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.95.0",
    "feedparser>=6.0.10",
    "google-genai>=1.24.0",
    "langchain>=0.0.139",
    "langdetect>=1.0.9",
    "matplotlib>=3.7.1",
    "numpy>=1.24.2",
    "openai>=1.93.0",
    "openai-whisper",
    "pandas>=2.0.0",
    "psutil>=7.0.0",
    "pydantic>=1.10.7",
    "pytest>=7.3.1",
    "pytest-asyncio>=1.0.0",
    "python-json-logger>=2.0.7",
    "pytubefix>=2.1.0",
    "requests>=2.28.2",
    "scikit-learn>=1.2.2",
    "sentence-transformers>=2.2.2",
    "sqlmodel>=0.0.24",
    "tabulate>=0.9.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.28.1",
    "uvicorn>=0.21.1",
    "whisper>=1.1.10",
    "wikipedia>=1.4.0",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
