[project]
name = "agi"
version = "0.1.0"
description = "An autonomous, evolving agentic system designed for continuous 24/7 operation, driven by internal states, reflection, and self-generated goals."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "asyncpg>=0.29.0",
    "chromadb>=0.4.0",
    "discord-py>=2.6.0",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.95.0",
    "feedparser>=6.0.10",
    "google-genai>=1.24.0",
    "langchain>=0.0.139",
    "langdetect>=1.0.9",
    "librosa>=0.10.1",
    "matplotlib>=3.7.1",
    "numpy>=1.24.0",
    "openai>=1.93.0",
    "openai-whisper>=20231117",
    "pandas>=2.0.0",
    "pgvector>=0.2.4",
    "pillow>=10.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=1.10.7",
    "pytest>=7.3.1",
    "pytest-asyncio>=1.0.0",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.20",
    "python-telegram-bot>=22.3",
    "pytubefix>=2.1.0",
    "requests>=2.28.2",
    "scikit-learn>=1.2.2",
    "sentence-transformers>=2.2.2",
    "soundfile>=0.12.1",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "tabulate>=0.9.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "transformers>=4.28.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.21.1",
    "watchdog>=6.0.0",
    "whisper>=1.1.10",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
conversational-ai = [
    "discord.py>=2.0.0",
    "python-telegram-bot>=20.0",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
