[project]
name = "agi"
version = "0.1.0"
description = "An autonomous, evolving agentic system designed for continuous 24/7 operation, driven by internal states, reflection, and self-generated goals."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "asyncpg>=0.29.0",
    "chromadb>=0.6.0", # Updated for better performance
    "discord-py>=2.6.0",
    "faiss-cpu>=1.9.0", # Updated for better performance
    "fastapi>=0.115.0", # Updated for latest features
    "feedparser>=6.0.10",
    "google-genai>=1.24.0",
    "langchain>=0.3.0", # Updated for latest features
    "langdetect>=1.0.9",
    "librosa>=0.10.1",
    "matplotlib>=3.9.0", # Updated for better performance
    "numpy>=1.26.0", # Updated for better performance
    "openai>=1.55.0", # Updated for latest features
    "pandas>=2.2.0", # Updated for better performance
    "pgvector>=0.3.0", # Updated for better performance
    "pillow>=10.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.9", # Updated for better stability
    "pydantic>=2.8.0", # Updated to v2 for better performance
    "pytest>=8.3.0", # Updated for latest features
    "pytest-asyncio>=0.25.0", # Updated for latest features
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.20",
    "python-telegram-bot>=22.3",
    "pytubefix>=2.1.0",
    "requests>=2.32.0", # Updated for security fixes
    "scikit-learn>=1.5.0", # Updated for better performance
    "sentence-transformers>=3.1.0", # Updated for better performance
    "soundfile>=0.12.1",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "tabulate>=0.9.0",
    "torch>=2.5.0", # Updated for better performance
    "torchaudio>=2.5.0", # Updated for better performance
    "torchvision>=0.20.0", # Updated for better performance
    "tqdm>=4.66.0", # Updated for latest features
    "transformers>=4.47.0", # Updated for better performance
    "typing-extensions>=4.15.0",
    "uvicorn>=0.34.0", # Updated for better performance
    "watchdog>=6.0.0",
    "wikipedia>=1.4.0",
    # Performance and optimization dependencies specifically for Snake Agent
    "asyncio-mqtt>=0.15.0", # For better async operations
    "aiosignal>=1.3.1", # For async operations
    "frozenlist>=1.4.1", # For async operations
    "yarl>=1.9.4", # For async operations
    "aiofiles>=23.2.1", # For async file operations
    "memory-profiler>=0.61.0", # For memory profiling
    "pytest-cov>=7.0.0",
    "accelerate>=1.10.1",
    "astor>=0.8.1", # For AST to source code conversion
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "database", "modules", "services"]

# Performance and optimization dependencies specifically for Snake Agent
[project.optional-dependencies]
conversational-ai = [
    "discord.py>=2.6.0",
    "python-telegram-bot>=22.3",
]

# Development dependencies
[tool.uv]
dev-dependencies = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pytest-benchmark>=4.0.0",  # For performance benchmarking
    "memory-profiler>=0.61.0",   # For memory analysis
]


