[project]
name = "memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.13",
    "fastapi",
    "google-genai>=1.23.0",
    "numpy",
    "openai>=1.93.0",
    "requests",
    "sentence-transformers",
    "uvicorn",
]
