[project]
name = "event-detector"
version = "0.1.0"
description = "A module for detecting emerging events from text data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "sentence-transformers",
    "scikit-learn",
    "numpy",
    "transformers",
    "torch"
]